[package]
name = "async_await"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
tokio = { version = "*", features = ["full"]}
futures-util = "*"
async-task = "*"
futures-lite = "*"
flume = "*"
hyper = {version = "*", features = ["http1", "http2", "client", "runtime"]}
smol = "*"
anyhow = "*"
async-native-tls = "*"
http = "*"