[package]
name = "async_await"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "*"
tokio = { version = "1.52.1", features = ["full"]}
futures-util = "*"
async-task = "*"
futures-lite = "*"
flume = "*"
smol = "*"
async-native-tls = "*"
http = "*"
mio = {version = "1.1.1", features = ["net", "os-poll"]}
rand = "0.10.1"