[package]
name = "async_await"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "*", features = ["full"]}
tokio-util = {version = "*", features = ["full"]}
futures = "*"
futures-util = "*"
async-task = "*"
futures-lite = "*"
flume = "*"
smol = "*"
async-native-tls = "*"
http = "*"
mio = {version = "1.1.1", features = ["net", "os-poll"]}
rand = "0.10.1"
clearscreen = "*"
device_query = "*"
nix = "*"
serde_json = "*"
uuid = { version = "*", features = ["v4"]}

[dev-dependencies]
mockall = "*"
mockito = "*"
tokio-test = "*"